test/sema/exercise/partial_init_struct.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
  y: number,
}

fn main(): unit {
  let s: S;
  s.x = 10;
  // CHECK: [[# @LINE - 1 ]]:3: error: 's' is not initialized
}
